--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -18,35 +18,26 @@ jobs:
   build:
     env:
       IMAGE_NAME: quay.io/eclipse/che-custom-nodejs-deasync
-
     runs-on: ubuntu-latest
-
     steps:
-
     - name: Clone source code
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
       with:
         fetch-depth: 1
-
-    - name: Docker build
+    - name: Docker login
+      uses: azure/docker-login@v1
+      with:
+        login-server: quay.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Docker Buildx
+      uses: crazy-max/ghaction-docker-buildx@v1.5.0
+      with:
+        version: v0.3.1
+    - name: Docker build, tag, and push
       run: |
-        echo "Building image ${IMAGE_NAME}"
-        cd 10.19.0
-        docker build -t ${IMAGE_NAME} .
-    - name: Docker publish
-      run: |
-        docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD" quay.io
-        GIT_BRANCH=$(echo "${GITHUB_REF}" | cut -d / -f 3)
-        echo "GIT_BRANCH is ${GIT_BRANCH} and GITHUB_REF is ${GITHUB_REF}"
-        GIT_TAG="latest"
-        if [[ "$GIT_BRANCH" != "master" ]]; then
-          GIT_TAG=${GIT_BRANCH}
-        fi
-        IMAGE_TAG="10.19.0-${GIT_TAG}"
-        # Publish with tag name
-        echo "Publishing image ${IMAGE_NAME}:${IMAGE_TAG}"
-        docker tag "${IMAGE_NAME}" "${IMAGE_NAME}:${IMAGE_TAG}"
-        docker push "${IMAGE_NAME}:${IMAGE_TAG}"
-      env:
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        IMAGE_VERSION=$(cat VERSION)
+        IMAGE_PLATFORMS=$(cat .platforms)
+        IMAGE_WITH_TAG="${IMAGE_NAME}:${IMAGE_VERSION}"
+        echo "Building version ${IMAGE_VERSION} of image ${IMAGE_NAME}"
+        docker buildx build --cache-from=type=registry,ref=${IMAGE_WITH_TAG}--cache-to=type=registry,ref=${IMAGE_WITH_TAG},mode=max --platform "$IMAGE_PLATFORMS" -t "${IMAGE_WITH_TAG}" --push .
