--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -42,5 +42,5 @@ jobs:
         IMAGE_VERSION=$(cat VERSION)
         PLATFORM=$(echo ${{matrix.platform}} | tr '\/' '-') 
         IMAGE_WITH_TAG="${IMAGE_NAME}:${IMAGE_VERSION}-${PLATFORM}"
-        echo "Building ${IMAGE_WITH_TAG}"
+        echo "Building ${IMAGE_WITH_TAG} on platform ${{matrix.platform}}"
         docker buildx build --cache-from=type=registry,ref=${IMAGE_WITH_TAG}--cache-to=type=registry,ref=${IMAGE_WITH_TAG},mode=max --platform "${{matrix.platform}}" -t "${IMAGE_WITH_TAG}" --push .
