--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -15,16 +15,10 @@ on:
       - 'master'
 
 jobs:
-  define_platforms:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: |
-          echo ::set-env name=platforms::$(cat .platforms)
   pre-compiler:
     strategy:
       matrix:
-        platform: ${{ steps.define_platforms.platforms }}
+        platform: ['linux/amd64']
     env:
       IMAGE_NAME: quay.io/eclipse/che-custom-nodejs-deasync
     runs-on: ubuntu-latest
@@ -47,6 +41,73 @@ jobs:
       run: |
         IMAGE_VERSION=$(cat VERSION)
         PLATFORM=$(echo ${{matrix.platform}} | tr '\/' '-') 
-        IMAGE_WITH_TAG="${IMAGE_NAME}:${IMAGE_VERSION}-${PLATFORM}-compile"
+        IMAGE_WITH_TAG="${IMAGE_NAME}:${IMAGE_VERSION}-${PLATFORM}-precompile"
         echo "Building ${IMAGE_WITH_TAG} on platform ${{matrix.platform}}"
-        
+        docker buildx build --cache-from=type=registry,ref=${IMAGE_WITH_TAG} --cache-to=type=registry,ref=${IMAGE_WITH_TAG},mode=max --platform "${{matrix.platform}}" -t "${IMAGE_WITH_TAG}" --target precompiler --push .
+  compiler:
+    needs: pre-compiler
+    strategy:
+      matrix:
+        platform: ['linux/amd64']
+    env:
+      IMAGE_NAME: quay.io/eclipse/che-custom-nodejs-deasync
+    runs-on: ubuntu-latest
+    steps:
+    - name: Clone source code
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 1
+    - name: Docker login
+      uses: azure/docker-login@v1
+      with:
+        login-server: quay.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Docker Buildx
+      uses: crazy-max/ghaction-docker-buildx@v1.5.0
+      with:
+        version: v0.3.1
+    - name: Docker build, tag, and push
+      run: |
+        IMAGE_VERSION=$(cat VERSION)
+        PLATFORM=$(echo ${{matrix.platform}} | tr '\/' '-') 
+        IMAGE_WITH_TAG="${IMAGE_NAME}:${IMAGE_VERSION}-${PLATFORM}"
+        PRECOMPILE_IMAGE_WITH_TAG="${IMAGE_NAME}:${IMAGE_VERSION}-${PLATFORM}-precompile"
+        echo "Building ${IMAGE_WITH_TAG} on platform ${{matrix.platform}}"
+        docker buildx build --cache-from=type=registry,ref=${PRECOMPILE_IMAGE_WITH_TAG} --cache-to=type=registry,ref=${IMAGE_WITH_TAG},mode=max --platform "${{matrix.platform}}" -t "${IMAGE_WITH_TAG}" --push .
+  assemble:
+    needs: compiler
+    strategy:
+      matrix:
+        platform: ['linux/amd64']
+    env:
+      IMAGE_NAME: quay.io/eclipse/che-custom-nodejs-deasync
+    runs-on: ubuntu-latest
+    steps:
+    - name: Clone source code
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 1
+    - name: Docker login
+      uses: azure/docker-login@v1
+      with:
+        login-server: quay.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Docker Buildx
+      uses: crazy-max/ghaction-docker-buildx@v1.5.0
+      with:
+        version: v0.3.1
+    - name: Create multi-arch image
+      run: |
+        IMAGE_VERSION=$(cat VERSION)
+        PLATFORM=$(echo ${{matrix.platform}} | tr '\/' '-') 
+        IMAGE_WITH_TAG="${IMAGE_NAME}:${IMAGE_VERSION}-${PLATFORM}-multi-test"
+        echo "Creating manifest for multi-arch build "
+        docker manifest create ${IMAGE_WITH_TAG} \
+        ${IMAGE_NAME}:${IMAGE_VERSION}-linux-arm64 \
+        ${IMAGE_NAME}:${IMAGE_VERSION}-linux-ppc64le \
+        ${IMAGE_NAME}:${IMAGE_VERSION}-linux-s390x \
+        ${IMAGE_NAME}:${IMAGE_VERSION}-linux-amd64
+        docker manifest push ${IMAGE_WITH_TAG}
+                                
