--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -43,7 +43,7 @@ jobs:
         PLATFORM=$(echo ${{matrix.platform}} | tr '\/' '-') 
         IMAGE_WITH_TAG="${IMAGE_NAME}:${IMAGE_VERSION}-${PLATFORM}-precompiler"
         echo "Building ${IMAGE_WITH_TAG} on platform ${{matrix.platform}}"
-        docker buildx build --cache-from=type=registry,ref=${IMAGE_WITH_TAG} --cache-to=type=registry,ref=${IMAGE_WITH_TAG},mode=max --platform "${{matrix.platform}}" -t "${IMAGE_WITH_TAG}" --target precompiler --push .
+        docker buildx build --cache-from=type=registry,ref=${IMAGE_WITH_TAG} --platform "${{matrix.platform}}" -t "${IMAGE_WITH_TAG}" --target precompiler --push .
   compiler:
     needs: pre-compiler
     strategy:
@@ -72,9 +72,9 @@ jobs:
         IMAGE_VERSION=$(cat VERSION)
         PLATFORM=$(echo ${{matrix.platform}} | tr '\/' '-') 
         IMAGE_WITH_TAG="${IMAGE_NAME}:${IMAGE_VERSION}-${PLATFORM}"
-        PRECOMPILE_IMAGE_WITH_TAG="${IMAGE_NAME}:${IMAGE_VERSION}-${PLATFORM}-precompile"
+        PRECOMPILE_IMAGE_WITH_TAG="${IMAGE_NAME}:${IMAGE_VERSION}-${PLATFORM}-precompiler"
         echo "Building ${IMAGE_WITH_TAG} on platform ${{matrix.platform}}"
-        docker buildx build --cache-from=type=registry,ref=${PRECOMPILE_IMAGE_WITH_TAG} --cache-to=type=registry,ref=${IMAGE_WITH_TAG},mode=max --platform "${{matrix.platform}}" -t "${IMAGE_WITH_TAG}" --push .
+        docker buildx build --cache-from="type=registry,ref=${PRECOMPILE_IMAGE_WITH_TAG}" --platform "${{matrix.platform}}" -t "${IMAGE_WITH_TAG}" --push .
   assemble:
     needs: compiler
     strategy:
