--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -21,7 +21,7 @@ jobs:
   pre-compiler:
     strategy:
       matrix:
-        platform: ['linux/amd64', 'linux/arm64', 'linux/ppc64le', 'linux/s390x']
+        platform: ['linux/amd64']
     runs-on: ubuntu-latest
     steps:
     - name: Clone source code
@@ -48,7 +48,7 @@ jobs:
     needs: pre-compiler
     strategy:
       matrix:
-        platform: ['linux/amd64', 'linux/arm64', 'linux/ppc64le', 'linux/s390x']
+        platform: ['linux/amd64']
     runs-on: ubuntu-latest
     steps:
     - name: Clone source code
