--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -65,7 +65,7 @@ jobs:
       uses: crazy-max/ghaction-docker-buildx@v3.1.0
       with:
         buildx-version: v0.3.0
-        qemu-version: v4.2.0-7
+        qemu-version: 4.2.0-7
     - name: Docker build, tag, and push
       run: |
         IMAGE_VERSION=$(cat VERSION)
@@ -90,7 +90,7 @@ jobs:
       uses: crazy-max/ghaction-docker-buildx@v1.5.0
       with:
         buildx-version: v0.3.0
-        qemu-version: v4.2.0-7
+        qemu-version: 4.2.0-7
     - name: Create multi-arch image
       run: |
         IMAGE_VERSION=$(cat VERSION)
