--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -37,7 +37,7 @@ jobs:
       uses: crazy-max/ghaction-docker-buildx@v3.1.0
       with:
         buildx-version: v0.3.0
-        qemu-version: v4.2.0-7
+        qemu-version: 4.2.0-7
     - name: Docker build, tag, and push
       run: |
         IMAGE_VERSION=$(cat VERSION)
