fix(bug): compilation error: remove s390x for now

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -22,7 +22,7 @@ jobs:
   pre-compiler:
     strategy:
       matrix:
-        platform: ['linux/amd64', 'linux/arm64', 'linux/ppc64le', 'linux/s390x']
+        platform: ['linux/amd64', 'linux/arm64', 'linux/ppc64le']
     runs-on: ubuntu-latest
     steps:
     - name: Clone source code
@@ -50,7 +50,7 @@ jobs:
     needs: pre-compiler
     strategy:
       matrix:
-        platform: ['linux/amd64', 'linux/arm64', 'linux/ppc64le', 'linux/s390x']
+        platform: ['linux/amd64', 'linux/arm64', 'linux/ppc64le']
     runs-on: ubuntu-latest
     steps:
     - name: Clone source code
@@ -99,6 +99,5 @@ jobs:
         DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${IMAGE_WITH_TAG} \
         ${IMAGE_NAME}:${IMAGE_VERSION}-linux-arm64 \
         ${IMAGE_NAME}:${IMAGE_VERSION}-linux-ppc64le \
-        ${IMAGE_NAME}:${IMAGE_VERSION}-linux-s390x \
         ${IMAGE_NAME}:${IMAGE_VERSION}-linux-amd64
         DOCKER_CLI_EXPERIMENTAL=enabled docker manifest push ${IMAGE_WITH_TAG}
