--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -29,4 +29,4 @@ jobs:
         echo "Building ${IMAGE_NAME}"
         docker build -t "${IMAGE_NAME}" .
         echo "Testing ${IMAGE_NAME}"
-        docker build -t "${IMAGE_NAME}-test" -f Dockerfile.test
+        docker build -t "${IMAGE_NAME}-test" -f Dockerfile.test .
